<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="handler"
            type="com.fitken.lanchat.handler.MainEventHandler" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.fitken.lanchat.ui.activity.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="1">

            <EditText
                android:id="@+id/et_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_type"
                android:text="@string/et_initialtype" />

            <ProgressBar
                android:id="@+id/progress_bar"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:indeterminate="true"
                android:visibility="invisible"
                tools:visibility="visible" />

            <Button
                android:id="@+id/btn_apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()-> handler.apply()}"
                android:text="@string/button_apply" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                style="@style/TextAppearance.AppCompat.Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_useddriver" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/spinner_prompt" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_empty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tv_empty"
                android:textSize="14sp" />

            <com.fitken.lanchat.ui.widget.CustomRecyclerView
                android:id="@+id/rv_bonjour_service"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/item_bonjour_service" />
        </FrameLayout>

    </LinearLayout>

</layout>